option java_package = "de.uniluebeck.itm.metadaten.files";
option java_outer_classname = "MetaDataService";

message VOID {
	optional string OperationKey = 1;
}

message Identification {
	required string username = 1;
	required string password = 2;
}

message SearchRequest {
	optional NODE query_ms = 1;
	optional string query_string = 2;
}

message SearchResponse {
	repeated NODE response = 1;
}
message Capabilities {
	required string parentnode_id = 1;
	optional int32 id = 2;
	optional string name = 3;
	optional string unit = 4;
	optional int32 defaults = 5;
	optional string datatype = 6;
}

message ServerIP {
	required string iP = 1;
}



message NODE {
	optional string knotenid = 1;
	optional string microcontroller = 2;
	optional string description = 3;
	optional string ip = 4;
	repeated Capabilities capabilityList = 5;
	optional int16 port = 6;
}

service Operations {
	rpc connect (Identification) returns (VOID);
	rpc add (NODE) returns (VOID);
	rpc remove (NODE) returns (VOID);
	rpc refresh (NODE) returns (VOID);
	rpc search (SearchRequest) returns (SearchResponse);
	rpc disconnect(Identification) returns (VOID);
	rpc removeallServerNodes(ServerIP) returns (VOID);
}
